@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class ChangeChannelCommand {
        + execute()
        ~ ChangeChannelCommand()
    }
  }
  

  namespace  {
    class Channel {
        - channelNumber : int
        ~ Channel()
        ~ changeChannel()
    }
  }
  

  namespace  {
    class Client {
        {static} + main()
    }
  }
  

  namespace  {
    interface Command {
        {abstract} + execute()
    }
  }
  

  namespace  {
    class Controller {
        ~ executeCommand()
        ~ setCommand()
    }
  }
  

  namespace  {
    class TV {
        ~ turnOff()
        ~ turnOn()
    }
  }
  

  namespace  {
    class TurnOffCommand {
        + execute()
        ~ TurnOffCommand()
    }
  }
  

  namespace  {
    class TurnOnCommand {
        + execute()
        ~ TurnOnCommand()
    }
  }
  

  ChangeChannelCommand .up.|> Command
  ChangeChannelCommand o-- Channel : channel
  Controller o-- Command : command
  TurnOffCommand .up.|> Command
  TurnOffCommand o-- TV : tv
  TurnOnCommand .up.|> Command
  TurnOnCommand o-- TV : tv


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
